--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,7 @@ github_username:  jekyll
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-include-cache
 
 remote_theme: mmistakes/minimal-mistakes
 
