--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,6 @@ main:
   - title: "Games"
     url: /games/
     description: "It is maybe a good section"
-  - title: "Works"
-    url: /works/
-    description: "It is probably a works section"
+  - title: "Paper Summary"
+    url: /paper_summary/
+    description: "It is probably a paper summar section"
